--- a/templates/base.html
+++ b/templates/base.html
@@ -6,27 +6,37 @@
 <head>
   <meta charset="utf-8" />
   <title>i/oGrow Engine Platform</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <meta content="" name="description" />
-  <meta content="" name="author" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta content="" name="description"/>
+  <meta content="" name="author"/>
+  <meta name="MobileOptimized" content="320">
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
-  <link href="static/plugins/bootstrap/css/bootstrap.min.css"  rel="stylesheet" type="text/css"/>
-  <link href="static/plugins/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>
-  <link href="static/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-  <link href="static/css/style-metro.css"  rel="stylesheet" type="text/css"/>
-  <link href="static/css/style.css"  rel="stylesheet" type="text/css"/>
-  <link href="static/css/style-responsive.css" rel="stylesheet" type="text/css"/>
-  
-  <link href="static/plugins/uniform/css/uniform.default.css"  rel="stylesheet" type="text/css"/>
-  <link href="static/plugins/bootstrap-switch/static/stylesheets/bootstrap-switch-metro.css" rel="stylesheet" type="text/css"/>
-  <link rel="stylesheet" type="text/css" href="static/plugins/select2/select2_metro.css" />
-  <link rel="stylesheet" href="static/css/datetimepicker.css"/>
-  <link rel="stylesheet" href="static/css/bootstrap-wysihtml5.css"/>
-  <link href="static/css/themes/light.css"  rel="stylesheet" type="text/css" id="style_color"/>
-  
-
+  <link href="static/bootstrap3/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+   <link href="static/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
   <!-- END GLOBAL MANDATORY STYLES -->
-  <link rel="shortcut icon" href="favicon.ico" />
+  <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
+  <link href="static/bootstrap3/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/plugins/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/plugins/jqvmap/jqvmap/jqvmap.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"/>
+  <!-- END PAGE LEVEL PLUGIN STYLES -->
+  <!-- BEGIN THEME STYLES -->
+  <link href="static/bootstrap3/css/style-metronic.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/style.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/style-responsive.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/plugins.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/pages/tasks.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/themes/light.css" rel="stylesheet" type="text/css" id="style_color"/>
+   <link rel="stylesheet" href="static/css/datetimepicker.css"/>
+  <link href="static/bootstrap3/css/custom.css" rel="stylesheet" type="text/css"/>
+  <link href="static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
+  <!-- END THEME STYLES -->
+  <link rel="shortcut icon" href="favicon.ico"/>
+
   <script type="text/javascript">
   (function() {
     var po = document.createElement('script');
@@ -36,160 +46,150 @@
     s.parentNode.insertBefore(po, s);
   })();
   </script>
-</head>
 
+</head>
 <body class="page-header-fixed">
   <!-- BEGIN HEADER -->   
-  <div class="header navbar navbar-inverse navbar-fixed-top">
+  <div class="header navbar navbar-default navbar-fixed-top">
     <!-- BEGIN TOP NAVIGATION BAR -->
-    <div class="navbar-inner">
-      <div class="container-fluid">
-        <!-- BEGIN LOGO -->
-        <a class="brand" href="/#/accounts/">
-        <img src="static/img/IO_Grow.png" width="125" alt="logo"  /> 
-        </a>
-        <!-- END LOGO -->
-        <!-- BEGIN RESPONSIVE MENU TOGGLER -->
-        <a href="javascript:;" class="btn-navbar collapsed" data-toggle="collapse" data-target=".nav-collapse">
-        <img src="static/img/menu-toggler.png" alt="" />
-        </a>   
-             <ul class="nav search-form-top" ng-controller="SearchFormController"> 
-                  <li>    
-                    <form class="form-inline ng-pristine ng-valid" ng-submit="executeSearch(searchQuery)">
-                      <div class="input-append row-fluid">
-                        <input type="text" ng-model="searchQuery" typeahead="result as result.title + ' (' + result.type + ')' for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="input-xlarge" placeholder="Search">
-                       <button class="gbqfb gbqfb-hvr"><span class="gbqfi"></span></button>
-                      </div>
-                    </form>
-                  </li> 
-              </ul>
-
+    <div class="header-inner">
+      <!-- BEGIN LOGO -->
+      <a class="navbar-brand" href="index.html">
+        <img src="static/bootstrap3/img/IO_Grow_min.png" alt="logo" class="img-responsive"/>
+      </a>         
+      <!-- END LOGO -->
+      <!-- BEGIN RESPONSIVE MENU TOGGLER -->
+      <a href="javascript:;" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <img src="static/img/sidebar-toggler-light.jpg" alt=""/>
+      </a>
+      <!-- END RESPONSIVE MENU TOGGLER -->
+      <!-- BEGIN TOP NAVIGATION MENU -->
+      <div id="navbarSearch">
+        <form id="navbarSearchForm" ng-controller="SearchFormController" class="navbar-form ng-pristine ng-valid " ng-submit="executeSearch(searchQuery)" role="search">
+              <div class="form-group">
+                <input type="text" ng-model="searchQuery" typeahead="result as result.title + ' (' + result.type + ')' for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="form-control" placeholder="Search">
+              </div>  
+               <button class="gbqfb gbqfb-hvr"><span class="gbqfi"></span></button>                              
+        </form>
+      </div><!--/navbarSearch-->
            
         <!-- END RESPONSIVE MENU TOGGLER -->            
         <!-- BEGIN TOP NAVIGATION MENU --> 
                     
-        <ul class="nav pull-right">
-          <!-- BEGIN NOTIFICATION DROPDOWN -->   
-          
-          <!-- END NOTIFICATION DROPDOWN -->
-          <!-- BEGIN INBOX DROPDOWN -->
-          
-          <!-- END INBOX DROPDOWN -->
-          <!-- BEGIN TODO DROPDOWN -->
-          
-          <!-- END TODO DROPDOWN -->               
-          <!-- BEGIN USER LOGIN DROPDOWN -->
-          <li class="dropdown user">
-            <a href="{{user.google_public_profile_url}}" target="_blank" class="dropdown-toggle" >
-            <img alt="" src="{{user.google_public_profile_photo_url}}" width="29" />
-            <span class="username">{{user.google_display_name}}</span>
-            
-            </a>
-            
-          </li>
-          <!-- END USER LOGIN DROPDOWN -->
-          <!-- END USER LOGIN DROPDOWN -->
-        </ul>
-        <ul class="nav pull-right">
-          <!-- BEGIN NOTIFICATION DROPDOWN -->   
-          
-          <!-- END NOTIFICATION DROPDOWN -->
-          <!-- BEGIN INBOX DROPDOWN -->
-          
-          <!-- END INBOX DROPDOWN -->
-          <!-- BEGIN TODO DROPDOWN -->
-          
-          <!-- END TODO DROPDOWN -->               
-          <!-- BEGIN USER LOGIN DROPDOWN -->
-          <li class="dropdown user">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-            <img alt="" src="static/img/glyphicons_156_show_thumbnails.png" width="20" />
-            
-            <span class="username"> {{active_app.label}}</span>
-            <i class="icon-angle-down"></i>
-            </a>
-
-            <ul class="dropdown-menu">
-            <!-- {{apps}}-->
-               {%for application in apps %}
-                     <li><a href="/apps/{{ application.id }}"><i class="icon-th"></i> {{application.label}}</a></li>
-                
-               {%endfor%}
-
-             
-            </ul>
-          </li>
-          <!-- END USER LOGIN DROPDOWN -->
-          <!-- END USER LOGIN DROPDOWN -->
-        </ul> 
-        <ul class="nav pull-right">
-          <!-- BEGIN NOTIFICATION DROPDOWN -->   
-          
-          <!-- END NOTIFICATION DROPDOWN -->
-          <!-- BEGIN INBOX DROPDOWN -->
-          
-          <!-- END INBOX DROPDOWN -->
-          <!-- BEGIN TODO DROPDOWN -->
-          
-          <!-- END TODO DROPDOWN -->               
-          <!-- BEGIN USER LOGIN DROPDOWN -->
-    
-          <li>
-            <a href="/live/companies/{{org_id}}/" target="new">
-            My company
-            </a>
-            
-          </li>
-          
-          <!-- END USER LOGIN DROPDOWN -->
-          <!-- END USER LOGIN DROPDOWN -->
-        </ul>
+        <ul class="nav navbar-nav pull-right">      
+              <li class="dropdown user">
+                <a href="/live/companies/{{org_id}}/" target="new" class="dropdown-toggle">       
+                  <span class="username">
+                    My company
+                  </span>
+                </a>        
+              </li>
+              <li class="dropdown user" id="header_task_bar">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true" >
+                <img alt="" src="static/bootstrap3/img/glyphicons_156_show_thumbnails.png" width="18">
+                  <span class="username">
+                    {{active_app.label}}
+                  </span>
+                  <i class="fa fa-angle-down"></i>      
+                </a>
+                <ul id="dropdown-menu-list"class="dropdown-menu extended">
+                  <li>
+                    <ul class="dropdown-menu-list scroller">
+                       {%for application in apps %}
+                        <li class="gb_a">
+                          <a href="/apps/{{ application.id }}">
+                          <i class="fa fa-user"></i>
+                          <span class="task">
+                            <span class="desc">
+                              {{application.label}}
+                            </span>
+                          </span>               
+                          </a>
+                        </li> 
+                       {%endfor%}                             
+                    </ul>
+                  </li>       
+                </ul>
+              </li>
+              <!-- END TODO DROPDOWN -->
+              <!-- BEGIN USER LOGIN DROPDOWN -->
+              <li class="dropdown user">
+                <a href="{{user.google_public_profile_url}}" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+                  <img alt="" src="https://lh3.googleusercontent.com/-XdUIqdMkCWA/AAAAAAAAAAI/AAAAAAAAAAA/4252rscbv5M/photo.jpg?sz=29"/>
+                  <span class="username">
+                    {{user.google_display_name}}
+                  </span>
+                </a>        
+              </li>
+              <!-- END USER LOGIN DROPDOWN -->
+        </ul>       
         <!-- END TOP NAVIGATION MENU --> 
       </div>
-    </div>
+    </div><!--navbar inner-->
     <!-- END TOP NAVIGATION BAR -->
-  </div>
-  <div id="errorModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel">{{_("Error")}}</h3>
-              </div>
-              <div class="modal-body">
-                
-                  
-                    <p>An error was occured. Please try again</p>
-
-                  
-                    
-                    </fieldset>
-                
-              </div>
-              <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-              
-              </div>
-              
-       </div>
-<div ng-view class="page-container row-fluid">
-
 </div>
-  <!-- END CONTAINER -->
-  <!-- BEGIN FOOTER -->
-  <div class="footer">
-    <div class="footer-inner">
-      2013 &copy; i/oGrow.
-    </div>
-    <div class="footer-tools">
-      <!--span class="go-top">
-      <i class="icon-angle-up"></i>
-      </span-->
-    </div>
-  </div>
-  <!-- END FOOTER -->
-  <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
-  <!-- BEGIN CORE PLUGINS -->   
+  <div class="modal fade"  id="errorModal"  tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+              <h3 id="myModalLabel">{{_("Error")}}</h3>
+            </div>
+            <div class="modal-body">
+                <p>An error has occured. Please try again</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn default" data-dismiss="modal">{{_("Close")}}</button>
+            </div>
+          </div>
+          <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+      </div>
+      <!-- /.modal -->
+<div class="page-container">
 
+  <!-- BEGIN SIDEBAR -->
+  <div class="page-sidebar-wrapper">
+    <div class="page-sidebar navbar-collapse collapse">
+        <!-- BEGIN SIDEBAR MENU -->
+        <ul class="page-sidebar-menu">
+          {% for tab in tabs %}
+              <li id="id_{{tab.name}}" class="start">
+                <a href="{{ tab.url }}">
+                <i class="fa fa-home"></i>
+                <span class="title">
+                  {{tab.label}}
+                </span>       
+                </a>
+              </li>
+           {% endfor %}                     
+        </ul>
+        <!-- END SIDEBAR MENU -->
+    </div>  
+  </div>  
+  <div class="ng-view-container" ng-view>
+
+  </div><!--/ng-view-container-->  
+</div>
+<!-- END CONTAINER -->
+
+<!-- BEGIN FOOTER -->
+<div class="footer">
+  <div class="footer-inner">
+         2013 &copy; i/oGrow.
+  </div>
+  <div class="footer-tools">
+   <!--  <span class="go-top">
+      <i class="fa fa-angle-up"></i>
+    </span> -->
+  </div>
+</div>
+<!-- END FOOTER -->
+<!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+<!-- BEGIN CORE PLUGINS -->   
   <script src="static/plugins/jquery-2.0.3.min.js"  type="text/javascript"></script>
+  <script src="static/bootstrap3/plugins/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
   <script src="static/app/scripts/vendor/select2.min.js" ></script>
    <script src="static/app/scripts/vendor/angular.js" ></script>
    <script src="static/app/scripts/vendor/ui-select2.js" ></script>
@@ -295,7 +295,9 @@
 
   <script src="https://apis.google.com/js/client.js?onload=loadGapi">
   </script>
-  <script src="static/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+  <script src="static/bootstrap3/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
+  <script src="static/bootstrap3/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="static/app/scripts/vendor/ui-bootstrap-0.5.0.js" ></script>
   <script src="static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
   <script src="static/app/scripts/vendor/moment.min.js"></script>
@@ -354,18 +356,18 @@
 
   
   <!-- IMPORTANT! Load jquery-ui-1.10.1.custom.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
-  <script src="static/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      
+  <!--<script src="static/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      -->
   
    <script type="text/javascript" src="static/app/scripts/vendor/bootstrap-datetimepicker.min.js"></script>
-  <script src="static/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript" ></script>
+  <script src="static/bootstrap3/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="static/plugins/excanvas.min.js"></script>
   <script src="static/plugins/respond.min.js"></script>  
   <![endif]-->   
-  <script src="static/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-  <script src="static/plugins/jquery.blockui.min.js" type="text/javascript"></script>  
-  <script src="static/plugins/jquery.cookie.min.js" type="text/javascript"></script>
-  <script src="static/plugins/uniform/jquery.uniform.min.js" type="text/javascript" ></script>
+  <script src="static/bootstrap3/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+  <script src="static/bootstrap3/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+  <script src="static/bootstrap3/plugins/jquery.cokie.min.js" type="text/javascript"></script>
+  <script src="static/bootstrap3/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
   <script src="static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript" ></script>
   
   <script src="static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
