Fixiing a bug on accounts/list.html

--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -101,10 +101,10 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-        <div class="">
+        <div class="header-row ">
           
           <div class="col-md-12">
-            <h2>{{ _("Accounts") }} </h2>
+            <h2 class="page-title">{{ _("Accounts") }} </h2>
             
                     <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
                     {{ _("New Account") }} <i class="icon-plus"></i>
