--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,7 @@
         <!-- END SIDEBAR MENU -->
     </div>  
   </div>  
-  <div class="ng-view-container" ng-view>
+  <div class="ng-view-container page-content-wrapper" ng-view>
 
   </div><!--/ng-view-container-->  
 </div>
