migrate /accounts/show.html to bootstrap3

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
   <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
   <link href="static/bootstrap3/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
+  <link rel="stylesheet" href="static/css/bootstrap-wysihtml5.css">
   <link href="static/bootstrap3/plugins/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/jqvmap/jqvmap/jqvmap.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"/>
