--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -209,9 +209,9 @@
                 <div class="dashboard-stat cards-small">
                   
                   <div class="details">
-                    <a href="/#/opportunities/show/<%= opp.id %>"><h3 class="relatedcardOppTitle">
+                    <a href="/#/opportunities/show/<%= opp.id %>"><h2 class="cardTitle">
                        <%=opp.name %>
-                    </h3></a>
+                    </h2></a>
                     <div class="desc">                           
                                      <span class="contact-title" ng-show="opp.amount">amount: <%=opp.amount%> </span>
                                     <span ng-show="opp.stage" class="contact-title" ><br>stage: <a class="desc" href="/#/search/type:Opportunity stage:<%=opp.stage%>">#<%=opp.stage%> </a></span><br>
@@ -229,8 +229,8 @@
                   
                   
                   <div class="blank_slate_arrow"></div>
-                  <div class="blank_slate_body">
-                      <img src="/static/img/opportunities_blank.png">
+                  <div class="blank_slate_body thumbnail">
+                      <img src="/static/img/opportunities_blank.png" class="img-responsive">
                       <p class="lead">Know which proposals/bids are pending, which you’ve won, and which you’ve lost. Enter notes about the opportunities, attach proposals or contracts to the opportunities, and keep a log of any changes.</p>
                   </div>
                 </div>
