--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -42,7 +42,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                <h3 id="myModalLabel">{{_("New Opportunity")}}</h3>
+                <h3 id="myModalLabel" class="modal-title">{{_("New Opportunity")}}</h3>
               </div>
               <div class="modal-body">
                 <form id="addOpportunity" name="addOpportunity"  ng-keyup="addOpportunityOnKey(opportunity)" class="form-horizontal"> 
@@ -51,7 +51,7 @@
                     
 
                     <div class="form-group">
-                        <label  class="required col-md-3 col-md-3 control-label">{{_("Name")}}</label>
+                        <label  class="required col-md-3 control-label">{{_("Name")}}</label>
                        
                        <div class="col-md-9">
                           <input type="text" required id="id_name" class="form-control" ng-model="opportunity.name">
@@ -168,7 +168,7 @@
             </div>
             <div class="col-md-7">
                   
-                    <form class=" ng-pristine ng-valid" ng-submit="executeSearch(searchQuery)">
+                    <form class="ng-pristine ng-valid" ng-submit="executeSearch(searchQuery)">
                       <div class="input-group">
 
                         <input type="text" ng-model="searchQuery" typeahead="result as result.title + ' - (' + result.amount + ' with ' + result.account_name + ' )'   for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="form-control" placeholder="{{ _('Quick Filtering') }}">
