Fix bug invalid token #115

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
     <!-- BEGIN TOP NAVIGATION BAR -->
     <div class="header-inner">
       <!-- BEGIN LOGO -->
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <img src="static/bootstrap3/img/IO_Grow_min.png" alt="logo" class="img-responsive"/>
       </a>         
       <!-- END LOGO -->
