Blank state in no result found  in search

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
   
 
   <!-- END GLOBAL MANDATORY STYLES -->
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link  rel="shortcut icon" href="favicon.ico" />
   <script type="text/javascript">
   (function() {
     var po = document.createElement('script');
@@ -237,9 +237,9 @@
 
 
 
-       var ROOT = '/_ah/api';
+       //var ROOT = '/_ah/api';
 
-  //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+  var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
