--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -24,7 +24,8 @@
     <link href="/static/frontend/css/pages/portfolio.css" rel="stylesheet" type="text/css"/>
     <!-- END PAGE LEVEL STYLES -->    
     <link href="/static/frontend/css/themes/light.css" rel="stylesheet" type="text/css" id="style_color"/>    
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link  rel="shortcut icon" href="favicon.ico"/>
+
     <script type="text/javascript">
   (function() {
    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -184,7 +185,7 @@
             <div class="row-fluid">
                 <div class="span8">
                     <p>
-                        <span class="margin-right-10">2014 © ioGgrow. ALL Rights Reserved.</span> 
+                        <span class="margin-right-10">2014 © i/oGrow. ALL Rights Reserved.</span> 
                         <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
                     </p>
                 </div>
@@ -209,8 +210,8 @@
       window.is_signed_in = false;
       window.authResult = undefined;
       var apisToLoad;
-      var ROOT = '/_ah/api';
-      //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+      //var ROOT = '/_ah/api';
+      var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
       var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
