--- a/templates/live/live_show_index.html
+++ b/templates/live/live_show_index.html
@@ -81,7 +81,7 @@
                                            <img class="hangout-icon" src="/static/img/gdl-stay-tuned.png" />
                                       {% endif %} 
                 <span> {{recent.name}} </span></a>
-                By  {{recent.organization_name}}
+                by  {{recent.organization_name}}
                                                           
                 </li>
                 {%endfor%}
