--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -118,6 +118,20 @@
                   </a>                 
                 </div>
               </div>
+               <div ng-show="!searchResults" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="thumbnail blank_slate_body">
+                      
+                      <p class="lead">{{ _('No results found, try with another term') }}</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
+
               </div>
             </div>
           <div class="row-fluid">
