--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -185,8 +185,8 @@
                   
                   
                   <div class="blank_slate_arrow"></div>
-                  <div class="blank_slate_body">
-                      <img src="/static/img/accounts_blank.png">
+                  <div class="thumbnail blank_slate_body">
+                      <img class="img-responsive" src="/static/img/accounts_blank.png">
                       <p class="lead">{{ _('Accounts  pages includes a detailed page for each customer, partner, or investor in your ecosystem. You and your co-workers can collaborate to get a deep understanding.') }}</p>
                   </div>
                
