--- a/templates/admin/users/list.html
+++ b/templates/admin/users/list.html
@@ -1,35 +1,24 @@
-
-
-<div class="page-sidebar nav-collapse collapse">
-      <!-- BEGIN SIDEBAR MENU -->        
-        <ul class="page-sidebar-menu">
-        
-        {% for tab in tabs %}
-           <li id="id_{{tab.name}}"  ><a href="{{tab.url}}"><i class="icon-cogs"></i><span class="title">{{tab.label}}</span></a></li>
-          {% endfor %}
-        </ul>
-     
-     
-      <!-- END SIDEBAR MENU -->
-</div>
-    
-<div  class="page-content">
+ <div  class="page-content">
     
 
    <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
-      <div id="portlet-config" class="modal hide">
-        <div class="modal-header">
+      <div id="portlet-config" class="modal">
+        <div class="modal-dialog">
+   <div class="modal-content">
+      <div class="modal-header">          
           <button data-dismiss="modal" class="close" type="button"></button>
           <h3>portlet Settings</h3>
         </div>
         <div class="modal-body">
           <p>Here will be a configuration form</p>
         </div>
+        </div>
+        </div>
       </div>
       <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <!-- BEGIN PAGE CONTAINER-->
-      <div class="container-fluid"ng-show="immediateFailed">
-         <div class="span12">  
+      <div class=""ng-show="immediateFailed">
+         <div class="col-md-12">  
           <h1>Sign-in Button;</h1>
               <span id="signin">
                   <span id="myGsignin"></span>
@@ -37,27 +26,29 @@
         </div>
       </div>
       
-      <div id="addAccountModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-header">
+      <div id="addAccountModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+   <div class="modal-content">
+      <div class="modal-header">          
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel">{{_("New User")}}</h3>
+                <h3 id="myModalLabel" class="modal-title">{{_("New User")}}</h3>
               </div>
               <div class="modal-body">
                  <form id="addAccount" name="addaccount" ng-submit="addNewUser(user)" class="form-horizontal"> 
-                  <fieldset>
+                 
                   
                     <p>Invite people from your team and start working together in seconds. Everyone you invite will receive a welcome email.</p>
 
-                    <div class="control-group">
-                        <label  class="required control-label">{{_("Email")}} *</label>
+                    <div class="form-group">       
+                        <label  class="required col-md-3 control-label">{{_("Email")}} *</label>
                        
-                        <div class="controls">
-                          <input type="email" required id="id_name" ng-model="user.email">
+                        <div class="col-md-9">     
+                          <input class="form-control" type="email" required id="id_name" ng-model="user.email">
                           
                         </div>
                     </div>
                     
-                    </fieldset>
+                    
                 
               </div>
               <div class="modal-footer">
@@ -65,14 +56,16 @@
                 <button  type="submit" class="btn blue addContactNow">{{_("Add this user")}}</button>
               </div>
                </form>
+              </div>
+              </div>
        </div>
-      <div class="container-fluid" ng-show="isSignedIn">
+      <div class="" ng-show="isSignedIn">
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-        <div class="row-fluid">
+        <div class="row">
           
-          <div class="span12">
+          <div class="col-md-12">
             <h2>{{ _("Users") }} </h2>
             
             <div class="btn-group">
@@ -89,10 +82,11 @@
 
 
             
-            <div class="row-fluid cards-container">
+            <div class="row cards-container">
+            <div class="col-md-12">
             <div class="inner-cards-container">
             
-              <div ng-repeat="user in users" class="span3 responsive" data-tablet="span6" data-desktop="span3">
+              <div ng-repeat="user in users" class="col-md-3 responsive" data-tablet="span6" data-desktop="span3">
                 <div class="dashboard-stat cards-small">
                   
                   <div class="details">
@@ -115,9 +109,11 @@
                                   
                 </div>
               </div>
+               <div class="clearfix"></div>
+              </div>
               </div>
             </div>
-          <div class="row-fluid">
+          <div class="row">
             <div class="pagination pull-right" ng-hide="isLoading">
                   
                   <ul>
