--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,14 @@
   <link href="static/bootstrap3/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
   <!-- END GLOBAL MANDATORY STYLES -->
   <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
+
   <link href="static/bootstrap3/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" href="static/css/bootstrap-wysihtml5.css">
   <link href="static/bootstrap3/plugins/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/jqvmap/jqvmap/jqvmap.css" rel="stylesheet" type="text/css"/>
   <link href="static/bootstrap3/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"/>
+    <link href="static/bootstrap3/plugins/select2/select2_metro.css" rel="stylesheet" type="text/css"/>
   <!-- END PAGE LEVEL PLUGIN STYLES -->
   <!-- BEGIN THEME STYLES -->
   <link href="static/bootstrap3/css/style-metronic.css" rel="stylesheet" type="text/css"/>
@@ -371,13 +373,13 @@
   <script src="static/bootstrap3/plugins/jquery.cokie.min.js" type="text/javascript"></script>
   <script src="static/bootstrap3/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
   <script src="static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript" ></script>
-  
+  <script src="static/bootstrap3/plugins/select2/select2.min.js" type="text/javascript"></script>
   <script src="static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
   <script src="static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
   <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
   <script src="/static/app/scripts/vendor/jquery.ui.map.min.js"></script> 
-  <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js"></script>
-
+  <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js">
+  </script>
   <!-- END CORE PLUGINS -->
   
 
