--- a/templates/base.html
+++ b/templates/base.html
@@ -243,9 +243,9 @@
 
 
 
-       //var ROOT = '/_ah/api';
+       var ROOT = '/_ah/api';
 
-  var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+  //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
