--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -207,21 +207,23 @@
                 </div>
               </div>
               <div class="clearfix"></div>
+              
               </div><!--/inner-cards-container-->
               </div>
             </div>
           <div class="row">
             <div class="pagination pull-right" ng-hide="isLoading">
                   
-                  <ul>
-                    <li ng-show="pagination.prev"><button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn">
+                 
+                   <button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="pagination.prev">
                     {{_("Prev")}} 
                     </button></li>
                     <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/"><%= page.id %></a></li>
-                    <li  ng-show="pagination.next"><button ng-click="listNextPageItems()"  class="btn">
+                   <button ng-click="listNextPageItems()"  class="btn"  ng-show="pagination.next">
                     {{_("Next")}} 
-                    </button></li>
-                  </ul>
+                    </button>
+                
+              
                 </div>
                 <h3 class="pagination pull-right" ng-show="isLoading">{{ _('Loading') }}...</h3>
           </div>
